--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
     <div class="container">
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand">Pokemon</a>
+                <a class="navbar-brand">
+                    <img class="d-inline-block align-top" width="30" height="30" src="./images/pokemon.png">
+                    Pokemon
+                </a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                     <button class="btn btn-outline-info" type="submit">Search</button>
                 </form>
             </div>
         </nav>
+        <div class="container mt-3">
+            <div class="poke row row-cols-1 row-cols-md-3 g-4">
+        
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
