--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./images/pokemon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
     <title>Pokemon</title>
+    <style>
+        body {
+            font-family: 'Orbitron', sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -19,15 +28,104 @@
                     <img class="d-inline-block align-top" width="30" height="30" src="./images/pokemon.png">
                     Pokemon
                 </a>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                    <button class="btn btn-outline-info" type="submit">Search</button>
-                </form>
             </div>
         </nav>
         <div class="container mt-3">
-            <div class="poke row row-cols-1 row-cols-md-3 g-4">
-        
+            <div class="poke row row-cols-1 row-cols-md-6 g-4">
+
+            </div>
+        </div>
+        <div class="container mt-3">
+            <div class="buttonShowPoke col-md-12 text-center">
+
+            </div>
+        </div>
+        <div class="container">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <p class="col-md-4 mb-0 text-muted">&copy; Kelompok 6</p>
+
+                <a href="/"
+                    class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                    <img class="d-inline-block align-top" width="50" height="50" src="./images/pokemon.png">
+                </a>
+
+                <p class="col-md-4 mb-0 text-muted text-end">&copy; Pokemon API</p>
+            </footer>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div id="modalPoke" class="modal-header">
+                        <h1 class="modal-title fs-2 fw-bold text-uppercase" id="staticBackdropLabel">Pokemon details
+                        </h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" id="bodyPoke">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-md-6 border border-4 shadow p-3 mb-5 bg-body rounded">
+                                    <div id="name"
+                                        class="row justify-content-center align-items-center g-2 fs-2 fw-bold text-uppercase">
+                                        <!-- nama pokemon pada modal -->
+                                    </div>
+                                    <div id="detailImg" class="row justify-content-center align-items-center g-2">
+                                        <!-- gambar pokemon pada modal -->
+                                    </div>
+                                    <div id="typeDetail" class="row justify-content-center align-items-center g-2">
+                                        <div class="col-3 m-2 badge bg-primary text-wrap">
+                                            Grass
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6 p-3 mb-5 bg-body rounded">
+                                    <div id="name"
+                                        class="row justify-content-center align-items-center g-2 fs-2 fw-bold text-uppercase">
+                                        base stats
+                                        <!-- nama pokemon pada modal -->
+                                    </div>
+                                    <div class="row mt-3">
+                                        <div>
+                                            <canvas id="myChart"></canvas>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <ul class="nav nav-tabs card-header-tabs" id="myTab">
+                                            <li class="nav-item">
+                                                <a href="#home" class="nav-link active" data-bs-toggle="tab">about</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a href="#profile" class="nav-link" data-bs-toggle="tab">moves</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="tab-content">
+                                            <div class="tab-pane fade show active" id="home">
+                                                <div id="otherDisplay" class="row justify-content-center">
+
+                                                </div>
+                                            </div>
+                                            <div class="tab-pane fade" id="profile">
+                                                <p id="mvPoke" class=""> </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="modalPoke" class="modal-footer">
+                            <button type="button" class="btn btn-dark" data-bs-dismiss="modal">
+                                Close
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -39,6 +137,9 @@
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"
         integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+
+    <!-- Radar Chart -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- JS Local -->
     <script src="test.js"></script>
